<resources>
    <string name="app_name">WorkUp</string>
    <string name="botao_login_convencional">Login convencional</string>
    <string name="botao_facebook">Login com facebook</string>
    <string name="action_settings">Settings</string>
    <string name="botao_nome_entrar">Entrar</string>
    <string name="botao_nome_concluir">Concluir</string>
    <string name="botao_nome_cadastrese">Cadastre-se</string>
    <string name="botao_nome_avancar">Avançar</string>
    <string name="botao_nome_atualizar">Atualizar</string>
    <string name="botao_nome_adicionar">Adicionar</string>
    <string name="botao_nome_agendar">Agendar</string>
    <string name="label_aviso_sem_alunos">Você não possui nenhum aluno ainda</string>
    <string name="label_aviso_sem_treinamentos">Você não possui nenhum treinamento ainda</string>
    <string name="label_aviso_sem_treinador">Você ainda não possui um treinador</string>
    <string name="label_fonte_livro">Fonte: Guia prático de avaliação física\nAutores:\n
        Andréa Silveira da Fontoura\n
        Charles Marques Formentin\n
        Everson Alves Abech\n
        
        Editora - Phorte
        Ano - 2008.
        
    </string>
    <string name="label_Aulas_Agendadas">Aulas Agendadas</string>
    <string name="title_activity_cadastrar_personal">Cadastrar Personal</string>
    <string name="title_activity_cadastrar_aluno">Cadastrar Aluno</string>
    <string name="title_activity_home_personal">Personal Trainer</string>
    <string name="title_activity_home_aluno">Aluno</string>
    <string name="title_activity_adicionar_aluno">Adicionar</string>
    <string name="botao_verificar_disponibilidade">Verificar Disponibilidade</string>
    <string name="label_duracao_aula">Duração da Aula</string>
     <string name="label_unidade_repeticoes">(unidades)</string>
     <string name="label_unidade_minutos">(Minutos)</string>
     <string name="label_editar_exercicios">Editar exercicios</string>
    <string name="label_resultados">Resultados</string>
    <string name="label_situacao_coronaria">Situação Coronária</string>
    <string name="label_questionarioQPAF">Questionario QPAF</string>
    <string name="label_gordura_corporal">Gordura Corporal</string>
    <string name="label_perimetria">Perimetria</string>
    <string name="label_fotos_da_avaliacao">Fotos da Avaliação</string>
    <string name="label_tipo_de_exercicio">Tipo de Exercício</string>
    <string name="label_selecionar_foto">Toque para selecionar uma nova foto</string>
    <string name="label_telefone">Telefone</string>
    <string name="label_nomeCompleto">Nome Completo</string>
    <string name="label_dataDeNascimento">Data de Nascimento</string>
    <string name="label_email">E-mail</string>
    <string name="label_sexo_masculino">Masculino</string>
    <string name="label_sexo_feminino">Feminino</string>
    <string name="label_usuario">Usuário</string>
    <string name="label_senha">Senha</string>
    <string name="label_SelecioneData">Selecione a data</string>
    <string name="label_selecioneHorario">Selecione o Horário</string>
    <string name="label_digiteLocal">Digite o local da aula</string>
    <string name="label_buscaAvaliacoes">Digite o usuário do avaliado</string>
    <string name="label_usuario_aluno">Usuário</string>
    <string name="label_nome_aluno">Nome</string>
    <string name="label_data_de_nascimento_aluno">Data de Nascimento</string>
    <string name="label_sexo_aluno">Sexo</string>
    <string name="botao_acompanhamento">Acompanhamento</string>
    <string name="botao_preescrever_treinamento">Preescrever Treinamento</string>
    <string name="label_meus_treinamentos">Meus Treinamentos</string>
    <string name="title_activity_perfil_personal">Perfil</string>
    <string name="title_activity_meus_alunos">Meus Alunos</string>
    <string name="title_activity_marcar_aula">Marcar Aulas</string>
    <string name="title_activity_agenda">Agenda</string>
    <string name="title_activity_confirmar_aula">Confirme sua Aula</string>
    <string name="label_solicitado_por">Solicitado por:</string>
    <string name="label_data_aula">Data da Aula</string>
    <string name="label_horario_aula">Horário da Aula</string>
    <string name="botao_confirmar">Confirmar</string>
    <string name="botao_cancelar">Cancelar</string>
    <string name="title_activity_gerenciar_treinamentos">Gerenciar Treinamentos</string>
    <string name="title_activity_organizar_treinamento">Organizar Treinamento</string>
    <string name="title_activity_novo_exercicio">Novo Exercício</string>
    <string name="label_cadastrar_novo_exercicio">Cadastrar Novo Exercício</string>
    <string name="label_exercicio_aerobico">Aeróbico</string>
    <string name="label_exercicio_anaerobico">Anaeróbico</string>
    <string name="label_descricao">Descrição</string>
    <string name="label_descanso">Descanso</string>
    <string name="label_duracao_exercicio">Duração</string>
    <string name="label_nome_exercicio">Nome do Exercício</string>
    <string name="title_activity_organizar_novo_treinamento">Organizar Novo Treinamento</string>
    <string name="label_repeticoes_exercicio">Repetições</string>
    <string name="title_activity_buscar_exercicios">Buscar Exercícios</string>
    <string name="label_novo_treinamento">Novo Treinamento</string>
    <string name="menu_label_publicar">Publicar</string>
    <string name="menu_label_adicionar_ao_novo_treinamento">Adicionar ao novo Treinamento</string>
    <string name="label_nome_do_treinamento">Nome do Treinamento</string>
    <string name="title_activity_editar_treinamento">Editar Treinamento</string>
    <string name="title_activity_minhas_avaliacoes">MinhasAvaliacoes</string>
    <string name="label_avaliacoes">Avaliações</string>
    <string name="title_activity_avaliar">Avaliar</string>
    <string name="title_activity_resultado_avaliacao">ResultadoAvaliacao</string>
    <string name="label_bicepsRelaxadoDireito">Biceps Relaxado (Direito)</string>
    <string name="label_bicepsRelaxadoEsquerdo">Biceps Relaxado (Esquerdo)</string>
    <string name="label_bicepsContraidoDireito">Biceps Contraído (Direito)</string>
    <string name="label_bicepsContraidoEsquerdo">Biceps Contraido (Esquerdo)</string>
    <string name="label_peito">Peito</string>
    <string name="label_cintura">Cintura</string>
    <string name="label_quadril">Quadril</string>
    <string name="label_abdomen">Abdomen</string>
    <string name="label_panturrilha">Panturrilha</string>
    <string name="label_panturrilhaDireita">Panturrilha (Direita)</string>
    <string name="label_panturrilhaEsquerda">Panturrilha (Esquerda)</string>
    <string name="label_coxaProximalDireita">Coxa Proximal (Direita)</string>
    <string name="label_coxaProximalEsquerda">Coxa Proximal (Esquerda)</string>
    <string name="label_coxaMedialDireita">Coxa Medial (Direita)</string>
    <string name="label_coxaMedialEsquerda">Coxa Medial (Esquerda)</string>
    <string name="label_coxaDistalDireita">Coxa Distal (Direita)</string>
    <string name="label_coxaDistalEsquerda">Coxa Distal (Esquerda)</string>
    <string name="label_ombro">Ombro</string>
    <string name="label_antebraco">Antebraço</string>
    <string name="label_peso">Peso (kg)</string>
    <string name="label_altura">Altura (cm)</string>
    <string name="label_idade">Idade</string>
    <string name="label_abdominal">Abdominal</string>
    <string name="label_coxa">Coxa</string>
    <string name="label_triceps">Triceps</string>
    <string name="label_subscapular">Subscapular</string>
    <string name="label_suprailiaca">Suprailiaca</string>
    <string name="label_linhaAxilarMedia">Linha Axilar Média</string>
    <string name="label_metodoDeCalculo">Metodo De Calculo</string>
    <string name="label_dobras_cutaneas">Dobras Cutâneas</string>
    <string name="label_medidas">Medidas Gerais</string>
    <string name="title_activity_adicionar_personal">AdicionarPersonal</string>
    <string name="title_activity_buscar_usuario">BuscarUsuario</string>
    <string name="label_selecionar_usuario">Selecione o usuário que será avaliado</string>
    <string name="label_local_aula">Local da aula</string>
    <string name="label_treinamento_aula">Treinamento realizado</string>
    <string name="botao_iniciar_treinamento">Iniciar Treinamento</string>
    <string name="botao_treinamento">Treinamento</string>
    <string name="title_activity_confirmar_inicio_treinamento">Iniciar Treinamento</string>
    <string name="title_activity_realizar_treinamento">Realizar Treinamento</string>
    <string name="label_ola">Olá!</string>
    <string name="label_selecionar_Treinamento">Selecione o treinamento que deseja realizar</string>
    <string name="label_meus_alunos">Meus Alunos</string>
    <string name="label_vamos_treinar">Vamos Treinar?</string>
    <string name="label_preescrever_treinamento">Preescrever treinamento</string>
    <string name="label_preescrever_treinamento_explicacao">Selecione o treinamento que deseja preescrever para este aluno</string>
    <string name="title_activity_editar_exercicio">Editar Exercicios</string>
    <string name="botao_editar">Editar</string>
    <string name="botao_excluir">Excluir</string>
    <string name="botao_adicionar_aos_meus_exercicios">Adicionar aos Meus Exercícios</string>
    <string name="title_activity_calcular">Calcular</string>
    <string name="title_activity_realizar_exercicio">RealizarExercicio</string>
    <string name="botao_iniciar_exercicio">Iniciar exercício</string>
    <string name="botao_finalizar_exercicio">Finalizar Exercício</string>
    <string name="title_activity_acompanhamento">Acompanhamento</string>
    <string name="label_acompanhamento">Acompanhamento</string>
    <string name="label_logout">Logout</string>
    <string name="botao_excluir_aula">Excluir Aula</string>
    <string name="botao_login_com_facebook">Login com Facebook</string>
    <string name="botao_editar_aula">Editar Aula</string>
    <string name="label_auto_avaliacao">Auto avaliação</string>
    <string name="label_avaliar_aluno">Avaliar Aluno</string>
    <string name="label_local_avaliacao">Local da Avaliação</string>
    <string name="title_activity_meu_personal">MeuPersonal</string>
    <string name="title_activity_acompanhamento_aluno">AcompanhamentoAluno</string>
    <string name="title_activity_perfil_aluno">PerfilAluno</string>
    <string name="title_activity_preescrever_treinamento">PreescreverTreinamento</string>
    <string name="label_dados_pessoais">Dados Pessoais</string>
    <string name="title_activity_alterar_dados_pessoais">AlterarDadosPessoais</string>
    <string name="label_senha_atual">Senha atual</string>
    <string name="label_nova_senha">Nova senha</string>
    <string name="label_confirmacao_da_senha">Confirmação da senha</string>
    <string name="label_alterar_dados_pessoais">Alterar dados pessoais</string>
    <string name="title_activity_visualisar_treinamento_realizado">Visualisar Treinamentos Realizados</string>
    <string name="title_activity_visualizar_avaliacao">Visualizar Avaliação</string>
    <string name="botao_aluno">Aluno</string>
    <string name="botao_personal">Personal</string>
    <string name="botao_novoTreinamento">Novo Treinamento</string>
    <string name="label_warning_cadastrar_novo_treinamento">Você não possui nenhum treinamento Preescrito. Para realizar um treinamento é necessário que seu treinador prescreva a você o treinamento mais adequado.</string>
    <string name="label_voltar">Voltar</string>
    <string name="label_adicionar">Adicionar</string>
    <string name="label_parabens">Parabéns</string>
    <string name="label_voce_concluiu_sua_avaliacao">Você concluiu sua avaliação... Clique no botão abaixo para concluir sua avaliação e salva-la no servidor</string>
    <string name="label_salvar_avaliacao">Salvar Avaliação</string>
    <string name="label_isto_pode_levar_algum_tempo">Isto pode levar algum tempo ...</string>
</resources>