<!-- This file is part of WorkUp.

WorkUp is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

WorkUp is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with WorkUp.  If not, see <http://www.gnu.org/licenses/>. -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/shape_bg"
    android:orientation="vertical" >

    <ListView
        android:id="@+id/lstAcompanhamentoAlunoTreinamentosRealizados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_below="@+id/swcVisualizarTreinamentoOuAvaliacao"
        android:dividerHeight="1dp" >
    </ListView>

    <Button
        android:id="@+id/btnIniciarTreinamentoAluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/margem_media"
        android:background="@drawable/shape_botao_azul"
        android:text="@string/botao_iniciar_treinamento" />

    <Switch
        android:id="@+id/swcVisualizarTreinamentoOuAvaliacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textOff="@string/label_avaliacoes"
        android:textOn="@string/botao_treinamento"
        android:layout_margin="@dimen/margem_media" />

</RelativeLayout>